# tone-of-voice

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  osv-scanner.toml  package.json  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ai-command-policy.yml  ai-review-rerun.yml  ai-review.yml  ci.yml  deploy.yml  osv-scan.yml  pr-guard.yml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.unicorn-hub/: config.json
deploy/systemd/: tone-of-voice-telegram-bot.service.example
docs/: 00-principles.md  01-current-voice-snapshot.md  02-memory-system.md  03-source-ingestion.md  04-platform-adaptation.md  05-roadmap.md  06-delivery-workflow.md  07-product-execution-plan.md  10-reference-library.md  11-refresh-log.md  12-stop-list.md  13-drafting-recipes.md  14-feedback-capture.md  15-regression-evals.md  16-telegram-bot-product.md  17-rag-style-memory.md
evals/generated-output/: step6-followup-seed.json
evals/regression/: step4-seed.json
evals/retrieval/: style-memory-seed.json
examples/: draft-request.telegram.json  feedback-capture.telegram.json
scripts/: ai-command-policy.mjs  ai-review-gate.mjs  ai-review-helpers.mjs  ai-review-rerun.mjs  apply-branch-protection.mjs  build_style_memory_index.py  build_telegram_metrics.py  capture_feedback.py  check-repo-baseline.mjs  check_feature_memory.py  deploy_release.sh  draft_post.py  export_telegram_posts.py  new-worktree.mjs  preflight.mjs  publish-branch.mjs  query_style_memory.py  resolve-pr-context.mjs  run_generated_output_experiments.py  run_regression_evals.py  run_retrieval_experiments.py  run_telegram_bot.py  set-implementation-agent.mjs  shared.mjs  smoke_telegram_bot.py  summarize_feedback.py  switch-review-agent.mjs
tests/: ai-review-helpers.test.mjs  ai-review-rerun.test.mjs  test_bot.py  test_check_feature_memory.py  test_cli_path_hardening.py  test_config.py  test_drafting.py  test_evals.py  test_experiments_common.py  test_feedback.py  test_generated_output_experiments.py  test_llama_index_memory.py  test_metrics.py  test_query_style_memory.py  test_retrieval_experiments.py  test_style_memory.py  test_telegram_export.py
(+79 files in other folders)
